# olcao

./: .gitignore  .olcao  CLAUDE.md  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.parallel.am  configure  configure.ac  configure.ac.old
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  constants.f90  elementData.f90  kinds.f90  radialGrid.f90  readData.f90  readDataSerial.f90  writeData.f90
src/applySpaceGroup/: ATOMS_O.mod  CMakeLists.txt  CONSTANTS.mod  CRYSTALSYSTEM_O.mod  Makefile.am  Makefile.in  OLCAO_KINDS.mod  O_CONSTANTS.mod  O_CRYSTALSYSTEM.mod  O_KINDS.mod  O_SPACEGROUPOPERATIONS.mod  SPACEGROUPOPERATIONS_O.mod  applySpaceGroup.f90
src/atomSCF/: ATOMDATA.mod  ATOMICTOTALENERGYSUBS.mod  CHARGEDENSITYDATA.mod  CMakeLists.txt  COMPUTEELECTPOTSUBS.mod  COMPUTEIONICPOTSUBS.mod  COMPUTEORBITALSSUBS.mod  CONSTANTS.mod  CONVERGENCESUBS.mod  ENERGYDATA.mod  EXCHCORRSUBS.mod  EXECUTIONDATA.mod  IMPLICITSCFINPUTSUBS.mod  INITRHOSUBS.mod  MIXPOTENTIALSUBS.mod  Makefile.am  Makefile.in  OLCAO_KINDS.mod  O_CONSTANTS.mod  O_KINDS.mod  O_RADIALGRID.mod  O_READDATASUBS.mod  POTDATA.mod  RADIALGRIDMOD.mod  READDATASUBS.mod  READSCFINPUTSUBS.mod  SPLINESUBS.mod  TEMPORBITALDATA.mod  WAVEFNDATA.mod  atomSCF.f90  checkConvg.f90  computeElectPot.f90  computeIonicPot.f90  computeOrbitals.f90  implicitSCFInput.f90  mixer.f90  readSCFInput.f90  splines.f90  totalEnergy.f90
src/contract/: ATOMDATA.mod  CHARGEDENSITYMOD.mod  CMakeLists.txt  CONSTANTS.mod  DIAGONALIZATIONSUBS.mod  EXECUTIONDATA.mod  GAUSSIANBASISDATA.mod  MATRIXELEMENTDATA.mod  MATRIXELEMENTSUBS.mod  Makefile.am  Makefile.in  NORMALIZATIONSUBS.mod  OLCAO_KINDS.mod  O_CONSTANTS.mod  O_KINDS.mod  O_RADIALGRID.mod  O_READDATASUBS.mod  O_WRITEDATASUBS.mod  PARSEINPUTSUBS.mod  POTGAUSSIANDATA.mod  PRINTRESULTSSUBS.mod  RADIALGRIDMOD.mod  READDATASUBS.mod  WAVEFUNCTIONDATA.mod  WRITEDATASUBS.mod  contract.f90  dataModules.f90  matrixDiag.f90  matrixElements.f90  normalization.f90  parseInput.f90  printResults.f90
src/data/: CMakeLists.txt  Makefile.am  Makefile.in  atomicPDB.tgz  precursorDB.tgz  spaceDB.tgz  sybdDB.tgz
src/debug-tools/: Makefile.am  Makefile.in
src/gaussFit/: CMakeLists.txt  EXECUTIONDATA.mod  FITTINGDATA.mod  GAUSSIANDATA.mod  GIVENDATA.mod  LAPACKDATA.mod  Makefile.am  Makefile.in  OLCAO_KINDS.mod  O_KINDS.mod  O_READDATASUBS.mod  READDATASUBS.mod  dataModules.f90  gaussFit.f90
src/makeKPoints/: CMakeLists.txt  CONSTANTS.mod  KPOINTMESH_O.mod  LATTICE_O.mod  Makefile.am  Makefile.in  OLCAO_KINDS.mod  O_CONSTANTS.mod  O_KINDS.mod  POINTGROUPOPERATIONS_O.mod  makekpoints.F90  makekpoints.f90
src/olcao/: CMakeLists.txt  Makefile.am  Makefile.in  OLCAO_Band.F90  OLCAO_Bond.f90  OLCAO_DOS.f90  OLCAO_Field.f90  OLCAO_Intg.f90  OLCAO_IntgWrap.f90  OLCAO_LocalEnv.f90  OLCAO_LocalEnvWrap.f90  OLCAO_Main.f90  OLCAO_Optc.f90  OLCAO_SCF.f90  OLCAO_SCFWrap.f90  OLCAO_Setup.f90  OLCAO_SetupWrap.f90  OLCAO_Wave.f90  atomicSites.f90  atomicTypes.f90  basis.f90  bond.F90  bond3C.F90  commandLine.f90  coreCharge.f90  dos.F90  elecStat.f90  exchCorr.f90  field.F90  forces.F90  gaussIntegrals.f90  gaussRelations.f90  hdf5Field.F90  hdf5Main.f90  hdf5MainEval.f90  hdf5MainEvec.F90  hdf5MainEvect.F90  hdf5MainPotRho.f90  hdf5PSCFBand.F90  hdf5PSCFIntg.f90  (+38 more)
src/polcao/: Makefile.am  Makefile.in  OLCAO_Band.F90  OLCAO_BandWrap.f90  OLCAO_Bond.f90  OLCAO_DOS.f90  OLCAO_Intg.f90  OLCAO_MainWrap.f90  OLCAO_Optc.f90  OLCAO_OptcWrap.f90  OLCAO_PSCF.f90  OLCAO_PSCFWrap.f90  OLCAO_Setup.F90  OLCAO_Setup.f90  OLCAO_Wave.f90  atomicSites.f90  atomicTypes.f90  basis.f90  bond.F90  commandLine.f90  compileCommand  dos.F90  elecStat.f90  exchCorr.f90  gaussIntegrals.f90  gaussRelations.f90  hdf5MainEvect.F90  hdf5PSCF.F90  hdf5PSCFBand.F90  hdf5PSCFIntg.f90  hdf5Setup.f90  hdf5SetupElec.f90  hdf5SetupExco.f90  hdf5SetupIntg.F90  hdf5SetupIntg.f90  input.f90  integralsPSCF.F90  integralsPSCF.old.F90  integralsSCF.F90  interfaces.F90  (+20 more)
src/polycryst/: .box-tio-rutile.swp  Makefile  box-bcc-fe  box-fap  box-fcc-fe  box-fcc-ni  box-hcp-ni  box-si  box-tio-rutile  euler_parameters  functions.c  global.h  input  lammps-polycryst.in  polycryst  polycryst-fap.in  polycryst-fcc-fe.in  polycryst.c  polycryst.h  polycryst.in  polycryst.tgz  site  siteq
src/scripts/: AngleData.pm  BondData.pm  CMakeLists.txt  ElementData.pm  Makefile.am  Makefile.in  MatrixReal.pm  StructureControl.pm  XYZ.py  XYZSettings.py  XYZrc.py  ab2pf.py  addAtoms  angle_utils.py  appendCol  assignGroups  assignSeats  atomPosDX  batchChange  batchClean  batchSub  bondAnalysis  bond_analysis.py  bond_analysisrc.py  cif2olcao  cif2skl  collectSYBD.py  collectSpectra  condense  condense.py  condenserc.py  copyInputs  dead-md.py  deadmd.py  dpmts.py  dump2skl  dump2skl.py  dump2sklrc.py  ea_driver_with_ea_loop.py  element_data.py  (+131 more)
src/tests/: CMakeLists.txt  conftest.py  pyproject.toml  test_angle_utils.py  test_dirac_helpers.py  test_org_radwavefn.py  test_structure_control_io.py  test_structure_control_ops.py
src/uolcao/: CMakeLists.txt  OLCAO.F90  OLCAO.f90  OLCAOWrap.f90  atomicSites.f90  atomicTypes.f90  basis.f90  bond.F90  bond3C.F90  commandLine.f90  coreCharge.f90  dimo.F90  dos.F90  elecStat.f90  exchCorr.f90  field.F90  forces.F90  gaussIntegrals.f90  hdf5Field.F90  hdf5PSCF.F90  hdf5PSCFEigVal.f90  hdf5PSCFEigVec.F90  hdf5PSCFIntg.F90  hdf5SCF.F90  hdf5SCFEigVal.f90  hdf5SCFEigVec.F90  hdf5SCFElec.f90  hdf5SCFField.F90  hdf5SCFIntg.F90  hdf5SCFPotRho.f90  input.f90  integrals.F90  integrals3Terms.F90  interfaces.F90  intgOrtho.F90  intgSaving.F90  kpoints.f90  lattice.f90  loen.f90  matrixSubs.F90  (+13 more)
src/upolcao/: .OLCAO.F90.swp  .hdf5SCF.F90.swp  .mpi.f90.swp  .secularEqn.F90.swp  OLCAO.F90  atomicSites.f90  atomicTypes.f90  basis.f90  bond.F90  bond3C.F90  commandLine.f90  coreCharge.f90  dos.F90  elecStat.f90  exchCorr.f90  field.F90  field.F90.good.1  field.F90.new.1  field.F90.old.1  field.F90.old.2  field.F90.old.3  field.F90_preSum  forces.F90  gaussIntegrals.f90  gaussIntegrals.vec.f90  gaussRelations.f90  hdf5Field.F90  hdf5PSCF.F90  (+46 more)
(+282 files in other folders)
