dist_bin_SCRIPTS = addAtoms appendCol atomPosDX \
batchChange batchClean batchSub bondAnalysis \
cif2olcao collectSpectra \
gaussOverlapRT \
intGen \
makeBDB makeBOND makeFittedRhoV makeinput makePDOS makePotDB makeSGDB \
makeSYBD massSubmit mkdirhier \
normalize \
olcao \
pdb2skl plotgraph polcao \
rpdf runIsoAtoms \
scanSpectra selectSYBD skl2vasp spectra2ODX \
unpackOLCAODB \
vasp2skl \
xyz2skl
dist_perllib_SCRIPTS = ElementData.pm StructureControl.pm
