dist_bin_SCRIPTS = appendCol atomPosDX \
batchChange batchClean batchSub bondAnalysis \
cif2olcao collectSpectra copyInputs \
gaussOverlapRT \
insert3cbo intGen \
lmp2skl \
makeBDB makeBOND makeFittedRhoV makeinput makePDOS makePotDB makeSGDB \
makeSYBD massSubmit mkdirhier \
normalize \
olcao olcao.py olcaoObject.py olcaoStructures.py \
pdb2skl plotgraph polcao \
rpdf runIsoAtoms \
scanSpectra selectSYBD skl2vasp spectra2ODX \
unpackOLCAODB \
vasp2skl \
xcMesh xyz2skl
dist_perllib_SCRIPTS = ElementData.pm StructureControl.pm
